<resources>
    <string name="app_name">Ana Raya</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="textHeadScreen1">Shop Your Favorite  Products</string>
    <string name="textUnderHeadScreen1">Selecting favorites has never been easier. Let\'s get started!</string>
    <string name="textHeadScreen2">Add Favorite Products to \nyour Cart</string>
    <string name="textUnderHeadScreen2">Begin your shopping journey by adding your favorite products to your cart.</string>
    <string name="enter_your_raya_id">Enter your Raya ID</string>
    <string name="raya_id_number">Raya ID Number</string>
    <string name="text_here">Text here</string>
    <string name="national_id_number">National ID Number</string>
    <string name="password">Password</string>
    <string name="enter_your_information">Enter your Information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verification_code">Verification code</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_dob">Please Enter Date of birth</string>
    <string name="new_password">New Password</string>
    <string name="choose_language">choose language</string>
    <string name="home">Home</string>
    <string name="market">Market Place</string>
    <string name="services">Services</string>
    <string name="more">More</string>
    <string name="office_delivery_schedule">Office Delivery Schedule</string>
    <string name="search_product">Search Product</string>
    <string name="trending_now" translatable="false">Trending now</string>
    <string name="view_all">View All</string>
    <string name="categories">Categories</string>
    <string name="dismiss_to_home">Dismiss to home</string>
    <string name="product_details">Product Details</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="all">All</string>
    <string name="there_is_a_problem">There is a problem</string>
    <string name="text_under_text_problem">Unfortunately, it was not possible to  connect to the internet. try again.</string>
    <string name="reload">Reload</string>
    <string name="orders">Orders</string>
    <string name="my_information">My Information</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="log_out">Log Out</string>
    <string name="promo_code">Promo Code</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="suggestions">suggestions</string>
    <string name="about">About</string>
    <string name="family">Family</string>
    <string name="filters">Filters</string>
    <string name="products">Products</string>
    <string name="my_cart">My Cart</string>
    <string name="add_items">Add items</string>
    <string name="checkout">Checkout</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="cart_total">Cart Total</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="total_amount">Total amount</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="please_add_items_to_cart">Please add items to cart.</string>
    <string name="go_to_home">Go to Home</string>
    <string name="go_to_market">Go to Market</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_address">Delivery address</string>
    <string name="my_apartment">My Apartment</string>
    <string name="delivery_schedule">Delivery Schedule</string>
    <string name="payment">Payment</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="total_cost">Total Cost</string>
    <string name="before_terms">By placing an order you agree to our </string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="place_order">Place Order</string>
    <string name="proceed">Proceed</string>
    <string name="add_address">Add Address</string>
    <string name="change">Change</string>
    <string name="pick_discount">Pick discount</string>
    <string name="apartment">Apartment</string>
    <string name="office">Office</string>
    <string name="building_name">Building Name</string>
    <string name="apt_no">Apt. No</string>
    <string name="floor_optional">Floor ( optional )</string>
    <string name="street">Street</string>
    <string name="additional_direction_optional">Additional direction ( optional )</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_label_optional">Address label ( optional )</string>
    <string name="text_under_address_page">Give the address a label ao you can easily choose between them</string>
    <string name="save">Save</string>
    <string name="order_review">Order Review</string>
    <string name="coupons">Coupons</string>
    <string name="check_out_summary">Check out Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="extra_fee">Extra Fee</string>
    <string name="shipping">Shipping</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="you_are_only_egp">You are only</string>
    <string name="away_from_free_shipping">away from free shipping</string>
    <string name="your_order_has_been_accepted">Your Order has been accepted</string>
    <string name="your_items_has_been_placed_and_is_on_it_s_way_to_being_processed">Your items has been placed and is on it’s way to being processed</string>
    <string name="back_to_home">Back to home</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="no_thank_you">No, Thank you</string>
    <string name="did_you_enjoy_ana_raya_app">Did You Enjoy ANA RAYA APP</string>
    <string name="next">Next</string>
    <string name="user_information">User Information</string>
    <string name="prices">Prices</string>
    <string name="highest_discount">Highest discount %</string>
    <string name="lowest_discount">Lowest discount %</string>
    <string name="edit">Edit</string>
    <string name="change_default_address">Change Default Address</string>
    <string name="change_password">Change password</string>
    <string name="pass" translatable="false">**********</string>
    <string name="please_add_addresses">Please add some addresses</string>
    <string name="address_label">AddressLabel</string>
    <string name="governorate">Governorate</string>
    <string name="district">District</string>
    <string name="address">Address</string>
    <string name="building">Building</string>
    <string name="landmark">Landmark</string>
    <string name="no_addresses_founded" translatable="false">No addresses founded</string>
    <string name="please_add_address">add address</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="only_left_in_stock">Only %1$s left in stock</string>
    <string name="coming_soon">Coming soon</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="please_enter_your_mobile">Please Enter Your Mobile Number</string>
    <string name="edit_information">Edit Information</string>
    <string name="text_validate_pass">Not less than 8 EX @Aa123456</string>
    <string name="discount_format">Discount %1$d%%</string>
    <string name="discount_round">%.2f</string>
    <string name="apply_coupon_here">Apply coupon here</string>
    <string name="apply">Apply</string>
    <string name="storage_permission_denied_please_allow_permission_to_get_image">Storage permission denied, please allow permission to get image</string>
    <string name="line_of_business">Line of Business</string>
    <string name="name_of_the_company">Name of the company</string>
    <string name="raya_id_is_empty">Raya Id is empty</string>
    <string name="national_id_is_empty">National Id is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="new_password_is_empty">New Password is empty</string>
    <string name="verification_is_empty">Verification Code is empty</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="phone_is_empty">Mobile Phone is empty</string>
    <string name="email_invalid_format" translatable="false">email invalid format</string>
    <string name="email_invalid_format_msg">email invalid format</string>
    <string name="password_format_counter" translatable="false">password must have at least 8 characters</string>
    <string name="password_format_upper" translatable="false">password must have at least one uppercase</string>
    <string name="password_format_lower" translatable="false">password must have at least one lowercase</string>
    <string name="password_format_digit" translatable="false">password must have at least one digit</string>
    <string name="password_format_special" translatable="false">password must have at least one special character</string>
    <string name="no_internet" translatable="false">No Internet</string>
    <string name="require">Require</string>
    <string name="password_format_counter_msg">password must have at least 8 characters</string>
    <string name="password_format_upper_msg">password must have at least one uppercase</string>
    <string name="password_format_lower_msg">password must have at least one lowercase</string>
    <string name="password_format_digit_msg">password must have at least one digit</string>
    <string name="password_format_special_msg">password must have at least one special character</string>
    <string name="company_is_empty">Company Field is Empty</string>
    <string name="governorate_company_is_empty">Governorate Company Field is Empty</string>
    <string name="company_address_is_empty">Company Address Field is Empty</string>
    <string name="address_label_is_empty">Address Label Field is Empty"</string>
    <string name="governorate_user_is_empty">Governorate Field is Empty"</string>
    <string name="district_label_is_empty">District Field is Empty"</string>
    <string name="address_is_empty">Address Field is Empty"</string>
    <string name="street_is_empty">Street Field is Empty"</string>
    <string name="building_is_empty">Building Field is Empty"</string>
    <string name="landmark_is_empty">Landmark Field is Empty"</string>
    <string name="field_require">Field require</string>
    <string name="optional">*optional</string>
    <string name="show_pop_schedule" translatable="false">showPopSchedule</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="language">Language</string>
    <string name="productdetails">ProductDetails</string>
    <string name="search">Search</string>
    <string name="edit_address">Edit address</string>
    <string name="information">Information</string>
    <string name="favorite">Favorite</string>
    <string name="type_to_search">Type to Search</string>
    <string name="see_schedule">See Delivery Schedule?</string>
    <string name="ok">OK</string>
    <string name="action_to_scedule" translatable="false">actionToScedule</string>
    <string name="submit">Submit</string>
    <string name="aboutus">AboutUs</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_referrals">My Referrals</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="french">French</string>
</resources>