<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.anaraya.anaraya.home.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_scheduleFragment"
            app:destination="@id/scheduleFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_allProductFragment"
            app:destination="@id/allProductFragment" />
        <action
            android:id="@+id/action_homeFragment_to_categoryProductFragment"
            app:destination="@id/categoryProductFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.anaraya.anaraya.home.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" >
        <action
            android:id="@+id/action_moreFragment_to_feedBackFragment"
            app:destination="@id/feedBackFragment" />
        <action
            android:id="@+id/action_moreFragment_to_myInformationFragment"
            app:destination="@id/myInformationFragment" />
        <action
            android:id="@+id/action_moreFragment_to_ordersFragment"
            app:destination="@id/ordersFragment" />
        <action
            android:id="@+id/action_moreFragment_to_helpFragment2"
            app:destination="@id/helpFragment2" />
        <action
            android:id="@+id/action_moreFragment_to_scheduleFragment"
            app:destination="@id/scheduleFragment" />
        <action
            android:id="@+id/action_moreFragment_to_promoCodeFragment"
            app:destination="@id/promoCodeFragment" />
        <action
            android:id="@+id/action_moreFragment_to_aboutUsFragment"
            app:destination="@id/aboutUsFragment" />
        <action
            android:id="@+id/action_moreFragment_to_familyFragment"
            app:destination="@id/familyFragment" />
    </fragment>
    <fragment
        android:id="@+id/servicesFragment"
        android:name="com.anaraya.anaraya.home.services.ServicesFragment"
        android:label=' '
        tools:layout="@layout/fragment_services" >
        <action
            android:id="@+id/action_servicesFragment_to_storeFragment"
            app:destination="@id/storeFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_homeFragment"
        app:destination="@id/homeFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:launchSingleTop="false"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out"
        app:popUpTo="@id/nav_home"
        app:popUpToInclusive="false" />
    <action
        android:id="@+id/action_global_servicesFragment"
        app:destination="@id/servicesFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out"
        app:popUpTo="@id/homeFragment"
        app:popUpToInclusive="false" />
    <action
        android:id="@+id/action_global_moreFragment"
        app:destination="@id/moreFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out"
        app:popUpTo="@id/homeFragment"
        app:popUpToInclusive="false" />
    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.anaraya.anaraya.home.schedule.ScheduleFragment"
        android:label="ScheduleFragment"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.anaraya.anaraya.home.productdetails.ProductDetailsFragment"
        android:label="@string/productdetails"
        tools:layout="@layout/fragment_product_details">
        <argument
            android:name="productId"
            app:argType="integer" />
        <action
            android:id="@+id/action_productDetailsFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_productDetailsFragment_self"
            app:destination="@id/productDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/allProductFragment"
        android:name="com.anaraya.anaraya.home.all_product.AllProductFragment"
        android:label="AllProductFragment"
        tools:layout="@layout/fragment_all_product">
        <action
            android:id="@+id/action_allProductFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoryProductFragment"
        android:name="com.anaraya.anaraya.home.category_product.CategoryProductFragment"
        android:label="CategoryProductFragment"
        tools:layout="@layout/fragment_category_product">
        <argument
            android:name="categoryName"
            app:argType="string" />
        <action
            android:id="@+id/action_categoryProductFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
        <argument
            android:name="categoryId"
            app:argType="integer" />
        <action
            android:id="@+id/action_categoryProductFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.anaraya.anaraya.home.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_searchFragment_to_filterFragment"
            app:destination="@id/filterFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.anaraya.anaraya.home.cart.CartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_scheduleFragment"
            app:destination="@id/scheduleFragment" />
        <action
            android:id="@+id/action_cartFragment_to_addressFragment"
            app:destination="@id/addressFragment" />
        <action
            android:id="@+id/action_cartFragment_to_totalCostFragment"
            app:destination="@id/totalCostFragment" />
        <action
            android:id="@+id/action_cartFragment_to_addAddressFragment"
            app:destination="@id/addAddressFragment" />
    </fragment>
    <fragment
        android:id="@+id/addressFragment"
        android:name="com.anaraya.anaraya.home.address.AddressFragment"
        android:label="@string/edit_address"
        tools:layout="@layout/fragment_address">
        <action
            android:id="@+id/action_addressFragment_to_addAddressFragment"
            app:destination="@id/addAddressFragment" />
        <action
            android:id="@+id/action_addressFragment_to_editAddressFragment"
            app:destination="@id/editAddressFragment" />
        <argument
            android:name="fromCart"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/addAddressFragment"
        android:name="com.anaraya.anaraya.home.address.add_address.AddAddressFragment"
        android:label="@string/add_address"
        tools:layout="@layout/fragment_add_address" >
        <argument
            android:name="fromCart"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/totalCostFragment"
        tools:layout="@layout/fragment_total_cost"
        android:name="com.anaraya.anaraya.home.total_cost.TotalCostFragment"
        android:label="Total cost" >
        <action
            android:id="@+id/action_totalCostFragment_to_orderFragment"
            app:popUpTo="@id/cartFragment"
            app:popUpToInclusive="true"
            app:destination="@id/orderFragment" />
        <argument
            android:name="orderState"
            app:argType="com.anaraya.anaraya.home.shared_data.AddOrderUiState" />
        <argument
            android:name="paymentMethod"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        tools:layout="@layout/fragment_order"
        android:name="com.anaraya.anaraya.home.order.OrderFragment"
        android:label="OrderFragment" />
    <fragment
        android:id="@+id/feedBackFragment"
        tools:layout="@layout/fragment_feed_back"
        android:name="com.anaraya.anaraya.home.more.feedback.FeedBackFragment"
        android:label="@string/feedback" />
    <fragment
        android:id="@+id/myInformationFragment"
        tools:layout="@layout/fragment_my_information"
        android:name="com.anaraya.anaraya.home.more.my_information.MyInformationFragment"
        android:label="@string/information" >
        <argument
            android:name="UserProfile"
            app:argType="com.anaraya.anaraya.home.shared_data.ProfileUiState"
            app:nullable="true" />
        <action
            android:id="@+id/action_myInformationFragment_to_addressFragment"
            app:destination="@id/addressFragment" />
        <action
            android:id="@+id/action_myInformationFragment_to_editInformationFragment"
            app:destination="@id/editInformationFragment" />
        <action
            android:id="@+id/action_myInformationFragment_to_OTPFragment"
            app:destination="@id/OTPFragment" />
    </fragment>
    <fragment
        android:id="@+id/editAddressFragment"
        tools:layout="@layout/fragment_edit_address"
        android:name="com.anaraya.anaraya.home.address.edit_address.EditAddressFragment"
        android:label="@string/edit_address" >
        <argument
            android:name="address"
            app:argType="com.anaraya.anaraya.home.shared_data.AddressUiState" />
    </fragment>
    <fragment
        android:id="@+id/editInformationFragment"
        android:name="com.anaraya.anaraya.home.more.my_information.edit_info.EditInformationFragment"
        android:label="@string/edit"
        tools:layout="@layout/fragment_edit_information" >
        <argument
            android:name="type"
            app:argType="string" />
        <argument
            android:name="data"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.anaraya.anaraya.home.order.get_order.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/favoriteFragment"
        tools:layout="@layout/fragment_favorite"
        android:name="com.anaraya.anaraya.home.favorite.FavoriteFragment"
        android:label="@string/favorite" />
    <fragment
        android:id="@+id/filterFragment"
        android:name="com.anaraya.anaraya.home.filter.FilterFragment"
        android:label="@string/filters"
        tools:layout="@layout/fragment_filter" />
    <fragment
        android:id="@+id/helpFragment2"
        tools:layout="@layout/fragment_help"
        android:name="com.anaraya.anaraya.home.more.help.HelpFragment"
        android:label="@string/help" >
        <action
            android:id="@+id/action_helpFragment2_to_helpDetailsFragment"
            app:destination="@id/helpDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/helpDetailsFragment"
        android:name="com.anaraya.anaraya.home.more.help.help_details.HelpDetailsFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help_details" >
        <argument
            android:name="topic"
            app:argType="com.anaraya.anaraya.home.more.help.HelpUiStateData" />
    </fragment>
    <fragment
        android:id="@+id/promoCodeFragment"
        tools:layout="@layout/fragment_promo_code"
        android:name="com.anaraya.anaraya.home.more.promo.PromoCodeFragment"
        android:label="@string/promo_code" />
    <fragment
        android:id="@+id/aboutUsFragment"
        tools:layout="@layout/fragment_about_us"
        android:name="com.anaraya.anaraya.home.more.aboutus.AboutUsFragment"
        android:label="@string/aboutus" />
    <fragment
        android:id="@+id/storeFragment"
        android:name="com.anaraya.anaraya.home.services.store.StoreFragment"
        tools:layout="@layout/fragment_store"
        android:label="StoreFragment" >
        <argument
            android:name="isProducts"
            app:argType="boolean" />
        <action
            android:id="@+id/action_storeFragment_to_editItemServiceFragment"
            app:destination="@id/editItemServiceFragment" />
    </fragment>
    <fragment
        android:id="@+id/editItemServiceFragment"
        android:name="com.anaraya.anaraya.home.services.store.edit.EditItemServiceFragment"
        tools:layout="@layout/fragment_edit_item_service"
        android:label="EditItemServiceFragment" >
        <argument
            android:name="isProducts"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/OTPFragment"
        android:name="com.anaraya.anaraya.home.otp.OTPFragment"
        android:label="@string/edit"
        tools:layout="@layout/fragment_o_t_p" />
    <fragment
        android:id="@+id/familyFragment"
        android:name="com.anaraya.anaraya.home.more.family.FamilyFragment"
        android:label="@string/my_referrals"
        tools:layout="@layout/fragment_family" >
        <action
            android:id="@+id/action_familyFragment_to_referralsFragment"
            app:destination="@id/referralsFragment" />
    </fragment>
    <fragment
        android:id="@+id/referralsFragment"
        tools:layout="@layout/fragment_referrals"
        android:name="com.anaraya.anaraya.home.more.family.family_referrals.ReferralsFragment"
        android:label="@string/my_referrals" />
</navigation>